force-app/main/default/objects/CUser__c/CUser__c.object-meta.xml
<CustomObject>
    <label>CUser</label>
    <nameField>
        <label>CUser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>