force-app/main/default/objects/CUser__c/fields/TokenExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>TokenExpiryDate__c</fullName>
    <label>TokenExpiryDate</label>
    <type>DateTime</type>
</CustomField>