force-app/main/default/objects/CUser__c/fields/TokenValue__c.field-meta.xml
<CustomField>
    <fullName>TokenValue__c</fullName>
    <label>TokenValue</label>
    <length>128</length>
    <type>Text</type>
</CustomField>