force-app/main/default/objects/CUser__c/fields/ZIP__c.field-meta.xml
<CustomField>
    <fullName>ZIP__c</fullName>
    <label>ZIP</label>
    <length>16</length>
    <type>Text</type>
</CustomField>